--- a/web-application/angular.json
+++ b/web-application/angular.json
@@ -50,7 +50,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "web-application:build"
+            "browserTarget": "web-application:build",
+            "port": 4210
           },
           "configurations": {
             "production": {
