--- a/web-application/package.json
+++ b/web-application/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "node-sass": "^4.10.0",
     "primeicons": "^1.0.0",
     "primeng": "^6.1.5",
     "rxjs": "^6.0.0",
